updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a one who thinks I am a graphic designer. :p</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Definately not store bought.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I like listening to music that moves me.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
-      <h1>Where do you live?</h1>
+      <p>I'm not sure right now. Something along the lines to fix and solve coding problems.</p>
+      <h1>I reside in the East Bay</h1>
       <p>Details here...</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Further my knowledge and finally take a chance to do what I dreamed about years ago.</p>
     </section>
 
     <footer id="footer">
