--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       <p>I like listening to music that moves me.</p>
       <h1>What's your dream job?</h1>
       <p>I'm not sure right now. Something along the lines to fix and solve coding problems.</p>
-      <h1>I reside in the East Bay</h1>
-      <p>Details here...</p>
+      <h1>Where do you live?</h1>
+      <p>I reside in the East Bay.</p>
       <h1>Why do you want to be a web developer?</h1>
       <p>Further my knowledge and finally take a chance to do what I dreamed about years ago.</p>
     </section>
